--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h1>zxc???</h1>
+<!DOCTYPE html>
+<html lang="ru">
+        <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/style.css">
+        <title>to-do</title>
+    </head>
+    <body>
+        <div class="block">
+            <div class="control">
+                <input class="field" placeholder="введи задачу: ">
+                <button class="add" type="button">+</button>
+            </div>
+                <div class="list"></div>
+        </div>
+        <script defer src="js/script.js"></script>
+    </body>
+</html>
