first somewhat working version

--- a/index.html
+++ b/index.html
@@ -1,19 +1,39 @@
 <!DOCTYPE html>
+
 <html lang="ru">
-        <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style.css">
-        <title>to-do</title>
-    </head>
-    <body>
-        <div class="block">
-            <div class="control">
-                <input class="field" placeholder="введи задачу: ">
-                <button class="add" type="button">+</button>
-            </div>
-                <div class="list"></div>
-        </div>
-        <script defer src="js/script.js"></script>
-    </body>
+
+<head>
+
+    <meta charset="UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="css/style.css">
+
+    <title>to-do by Hornet</title>
+
+</head>
+
+<body>
+
+<div class="block">
+    <h2>to-do-shka</h2>
+    <h4>simpliest shit to do that i spent 8 hours fucking with javascript</h4>
+    <div class="control">
+
+        <input class="field" placeholder="таска:">
+
+        <button class="add" type="button">+</button>
+        <button class="remove" type="button">-</button>
+
+    </div>
+
+    <div class="array"></div>
+
+</div>
+
+<script defer src="js/script.js"></script>
+
+</body>
+
 </html>
