--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <h4>simpliest shit to do that i spent 8 hours fucking with javascript</h4>
     <div class="control">
 
-        <input class="field" placeholder="таска:">
+        <label>
+            <input class="field" type="text" placeholder="таска:">
+        </label>
 
         <button class="add" type="button">+</button>
         <button class="remove" type="button">-</button>
