tasks now can be selected by number for deleting(v.0.2.2)

--- a/index.html
+++ b/index.html
@@ -18,19 +18,17 @@
 
 <div class="block">
     <h2>to-do-shka</h2>
-    <h4>simpliest shit to do that i spent 8 hours fucking with javascript</h4>
+    <h4>запиши все, что тебе надо сделать сегодня</h4>
     <div class="control">
 
         <label>
             <input class="field" type="text" placeholder="таска:">
         </label>
 
-        <button class="add" type="button">+</button>
-        <button class="remove" type="button">-</button>
-
     </div>
-
-    <div class="array"></div>
+    <button class="add" type="button">+</button>
+    <button class="remove" type="button">-</button>
+    <div class="array" id="tasksArray"></div>
 
 </div>
 
