--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <div class="block">
     <h2>to-do-shka</h2>
     <h4>запиши все, что тебе надо сделать сегодня</h4>
+    <h5>устал работать? вруби <a href="https://www.youtube.com/watch?v=e97w-GHsRMY" class="link">музло</a></h5>
     <div class="control">
 
         <label>
