added clock and little styling(v.0.2.4)

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 
 </head>
 
-<body>
+<body onload="clock()">
 
 <div class="block">
     <h2>to-do-shka</h2>
     <h4>запиши все, что тебе надо сделать сегодня</h4>
     <h5>устал работать? вруби <a href="https://www.youtube.com/watch?v=e97w-GHsRMY" class="link">музло</a></h5>
+    <h5 id="clock"></h5>
     <div class="control">
 
         <label>
